--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=500, initial-scale=1">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
+  <script src="https://use.fontawesome.com/15a1ea4238.js"></script>
   <title>Fiche produit</title>
 </head>
 
@@ -16,20 +17,43 @@
   <header>
     <img src="img\Innisfree_logo.jpg" title="logo Innisfree" alt="logo Innisfree">
     <nav>
-      <ul>
-        <li><a href="#">Nouveautés</a></li>
+      <ul id="menu">
+
+        <li>
+          <a href="#">Nouveautés</a>
+        </li>
+
         <li>|</li>
-        <li><a href="#">Maquillage</a></li>
+
+        <li>
+          <a href="#">Maquillage</a>
+        </li>
+
         <li>|</li>
-        <li><a href="#">Soins</a></li>
+
+        <li>
+          <a href="#">Soins</a>
+        </li>
+
         <li>|</li>
-        <li><a href="#">Offres spéciales</a></li>
+
+        <li>
+          <a href="#">Offres spéciales</a>
+        </li>
+
         <li></li>
         <li></li>
         <li></li>
-        <li><a href="#">Mon compte</a></li>
+
+        <li>
+          <a href="#">Mon compte</a>
+        </li>
+
         <li>|</li>
-        <li><a href="#">Mon panier</a></li>
+
+        <li>
+          <a href="#">Mon panier</a>
+        </li>
       </ul>
     </nav>
   </header>
@@ -38,31 +62,96 @@
   <p id="categories">HOME > Nouveautés</p>
   <div class="ficheproduit">
     <figure>
-      <img src="img\10848_l.jpg" alt="huile démaquillante" title="huile démaquillante">
+
+      <div class="slideshow-container">
+        <div class="mySlides fade">
+          <div class="numbertext">1 / 3</div>
+          <img src="img\10848_l.jpg" style="width:400px">
+          <div class="text">Caption Text</div>
+        </div>
+
+        <div class="mySlides fade">
+          <div class="numbertext">2 / 3</div>
+          <img src="img\10848_7.jpg" style="width:400px">
+          <div class="text">Caption Two</div>
+        </div>
+
+        <div class="mySlides fade">
+          <div class="numbertext">3 / 3</div>
+          <img src="img\10848_3.jpg" style="width:400px">
+          <div class="text">Caption Three</div>
+        </div>
+
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <br>
+
+      <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+      </div>
+
+
     </figure>
     <div class="description">
       <h1>Huile démaquillante aux pépins de pomme</h1><br>
       <p>Cette huile nettoyante, formulée avec de l'huile de graines de pommes et des extraits de pomme, aide à éliminer complètement le maquillage tout en conservant la peau fraîche et douce.</p>
       <div class="formulaire">
-      <form method="post" action="traitement.php">
-      <p class="prix">14,50€</p><br>
-      <p>Quantité :
-        <input type="number" min="1" max="5"/></p><br>
-        <input id="aupanier" type="submit" value="Ajouter au panier" />
+        <form method="post" action="#">
+          <p class="prix">14,50€</p><br>
+          <p>Quantité :
+            <input type="number" min="1" max="5"/></p><br>
+            <input id="aupanier" type="submit" value="Ajouter au panier" />
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-  <!-- Fin de la fiche produit -->
-  <!-- Début du footer -->
-  <footer>
-    <nav>
-      <ul>
-        <li></li>
-      </ul>
-    </nav>
+      <!-- Fin de la fiche produit -->
+      <!-- Début du footer -->
+      <footer>
 
-  </footer>
+        <script type="text/javascript">
+
+        var slideIndex = 1;
+        showSlides(slideIndex);
+
+        function plusSlides(n) {
+          showSlides(slideIndex += n);
+        }
+
+        function currentSlide(n) {
+          showSlides(slideIndex = n);
+        }
+
+        function showSlides(n) {
+          var i;
+          var slides = document.getElementsByClassName("mySlides");
+          var dots = document.getElementsByClassName("dot");
+          if (n > slides.length) {slideIndex = 1}
+          if (n < 1) {slideIndex = slides.length}
+          for (i = 0; i < slides.length; i++) {
+            slides[i].style.display = "none";
+          }
+          for (i = 0; i < dots.length; i++) {
+            dots[i].className = dots[i].className.replace(" active", "");
+          }
+          slides[slideIndex-1].style.display = "block";
+          dots[slideIndex-1].className += " active";
+        }
+        </script>
+<hr>
+        <nav>
+          <ul>
+            <li><i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></li>
+            <li><i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></li>
+            <li><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></li>
+            <li><i class="fa fa-pinterest-square fa-3x" aria-hidden="true"></i></li>
+          </ul>
+        </nav>
+
+      </footer>
 
 
-</body>
-</html>
+    </body>
+    </html>
