--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
   <script src="https://use.fontawesome.com/15a1ea4238.js"></script>
+  <link href="css/bootstrap.min.css" rel="stylesheet">
   <title>Fiche produit</title>
 </head>
 
@@ -64,22 +65,16 @@
     <figure>
 
       <div class="slideshow-container">
-        <div class="mySlides fade">
-          <div class="numbertext">1 / 3</div>
-          <img src="img\10848_l.jpg" style="width:400px">
-          <div class="text">Caption Text</div>
+        <div class="mySlides">
+          <img src="img\10848_l.jpg" style="width:500px">
         </div>
 
-        <div class="mySlides fade">
-          <div class="numbertext">2 / 3</div>
-          <img src="img\10848_7.jpg" style="width:400px">
-          <div class="text">Caption Two</div>
+        <div class="mySlides">
+          <img src="img\10848_7.jpg" style="width:500px">
         </div>
 
-        <div class="mySlides fade">
-          <div class="numbertext">3 / 3</div>
-          <img src="img\10848_3.jpg" style="width:400px">
-          <div class="text">Caption Three</div>
+        <div class="mySlides">
+          <img src="img\10848_3.jpg" style="width:500px">
         </div>
 
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -96,7 +91,7 @@
 
     </figure>
     <div class="description">
-      <h1>Huile démaquillante aux pépins de pomme</h1><br>
+      <h1>Apple seed cleansing oil 150ml</h1><br>
       <p>Cette huile nettoyante, formulée avec de l'huile de graines de pommes et des extraits de pomme, aide à éliminer complètement le maquillage tout en conservant la peau fraîche et douce.</p>
       <div class="formulaire">
         <form method="post" action="#">
@@ -107,6 +102,44 @@
           </div>
         </div>
       </div>
+
+      <!-- début cross selling -->
+
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+              <img src="img\10849_l.jpg" alt="...">
+              <div class="caption">
+                <h3>Apple seed deep cleansing foam 150ml</h3>
+                <p><a href="#" class="btn btn-primary" role="button">Ajouter au panier</a></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+              <img src="img\10850_l.jpg" alt="...">
+              <div class="caption">
+                <h3>Apple seed lip & eye remover 100ml</h3>
+                <p><a href="#" class="btn btn-primary" role="button">Ajouter au panier</a></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+              <img src="img\10851_l.jpg" alt="...">
+              <div class="caption">
+                <h3>Apple seed cleansing tissue 15sheets</h3>
+                <p><a href="#" class="btn btn-primary" role="button">Ajouter au panier</a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- fin cross selling -->
+
       <!-- Fin de la fiche produit -->
       <!-- Début du footer -->
       <footer>
@@ -140,7 +173,12 @@
           dots[slideIndex-1].className += " active";
         }
         </script>
-<hr>
+
+        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="js/bootstrap.min.js"></script>
+        <hr>
         <nav>
           <ul>
             <li><i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></li>
