--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
         </div>
       </div>
 
+      <div class="maybe">
+        <p></p>
+
+      </div>
+
       <!-- début cross selling -->
 
       <div class="container">
