--- a/portfolio.html
+++ b/portfolio.html
@@ -66,6 +66,27 @@
       <hr>
       <nav>
         <ul>
+          <p>Newsletter</p>
+          <p>Inscrivez-vous et profitez de nos offres spéciales :</p>
+          <form method="post">
+            <input type="text" name="first name" placeholder="Prénom" size="20"/>
+            <input type="text" name="last name" placeholder="Nom" size="20"/><br>
+            <input type="text" name="email" placeholder="Votre adresse email" size="49" /><br>
+            <input type="submit" value="Je m'inscris" class="envoyer"/>
+          </form>
+        </ul>
+        </nav>
+
+        <nav>
+          <ul>
+            <li>Contact</li>
+            <li></li>
+            <li>support_world@innisfree.co.kr</li>
+          </ul>
+        </nav>
+
+        <nav>
+        <ul class="socialmedia">
           <li><i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></li>
           <li><i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></li>
           <li><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></li>
