--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
   <!-- Fin du header et de la barre de navigation -->
   <!-- Début de la fiche produit -->
   <hr>
+  <ol class="breadcrumb">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="#">Soins</a></li>
+    <li class="actual">Démaquillant</li>
+  </ol>
+  <hr>
+
   <div class="ficheproduit">
 
     <figure>
@@ -144,48 +151,34 @@
         </div>
       </div>
       <!-- fin cross selling -->
-
       <!-- Fin de la fiche produit -->
+
       <!-- Début du footer -->
       <footer>
-
-        <script type="text/javascript">
-
-        var slideIndex = 1;
-        showSlides(slideIndex);
-
-        function plusSlides(n) {
-          showSlides(slideIndex += n);
-        }
-
-        function currentSlide(n) {
-          showSlides(slideIndex = n);
-        }
-
-        function showSlides(n) {
-          var i;
-          var slides = document.getElementsByClassName("mySlides");
-          var dots = document.getElementsByClassName("dot");
-          if (n > slides.length) {slideIndex = 1}
-          if (n < 1) {slideIndex = slides.length}
-          for (i = 0; i < slides.length; i++) {
-            slides[i].style.display = "none";
-          }
-          for (i = 0; i < dots.length; i++) {
-            dots[i].className = dots[i].className.replace(" active", "");
-          }
-          slides[slideIndex-1].style.display = "block";
-          dots[slideIndex-1].className += " active";
-        }
-        </script>
-
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="js/bootstrap.min.js"></script>
         <hr>
         <nav>
           <ul>
+            <p>Newsletter</p>
+            <p>Inscrivez-vous et profitez de nos offres spéciales :</p>
+            <form method="post">
+              <input type="text" name="first name" placeholder="Prénom" size="20"/>
+              <input type="text" name="last name" placeholder="Nom" size="20"/><br>
+              <input type="text" name="email" placeholder="Votre adresse email" size="49" /><br>
+              <input type="submit" value="Je m'inscris" class="envoyer"/>
+            </form>
+          </ul>
+          </nav>
+
+          <nav>
+            <ul>
+              <li>Contact</li>
+              <li></li>
+              <li>support_world@innisfree.co.kr</li>
+            </ul>
+          </nav>
+
+          <nav>
+          <ul class="socialmedia">
             <li><i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></li>
             <li><i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></li>
             <li><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></li>
@@ -193,6 +186,41 @@
           </ul>
         </nav>
 
+
+                <script type="text/javascript">
+
+                var slideIndex = 1;
+                showSlides(slideIndex);
+
+                function plusSlides(n) {
+                  showSlides(slideIndex += n);
+                }
+
+                function currentSlide(n) {
+                  showSlides(slideIndex = n);
+                }
+
+                function showSlides(n) {
+                  var i;
+                  var slides = document.getElementsByClassName("mySlides");
+                  var dots = document.getElementsByClassName("dot");
+                  if (n > slides.length) {slideIndex = 1}
+                  if (n < 1) {slideIndex = slides.length}
+                  for (i = 0; i < slides.length; i++) {
+                    slides[i].style.display = "none";
+                  }
+                  for (i = 0; i < dots.length; i++) {
+                    dots[i].className = dots[i].className.replace(" active", "");
+                  }
+                  slides[slideIndex-1].style.display = "block";
+                  dots[slideIndex-1].className += " active";
+                }
+                </script>
+
+                <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+                <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+                <!-- Include all compiled plugins (below), or include individual files as needed -->
+                <script src="js/bootstrap.min.js"></script>
       </footer>
 
 
