modif page portfolio

--- a/index.html
+++ b/index.html
@@ -107,16 +107,11 @@
             <input id="aupanier" type="submit" value="Ajouter au panier" />
         </div>
       </div>
-
-
-
+      <hr>
       <div class="maybe">
-        <p></p>
-
+        <p>Ces produits pourraient vous intéresser :</p>
       </div>
-
       <!-- début cross selling -->
-
       <div class="container">
         <div class="row">
           <div class="col-sm-6 col-md-4">
