--- a/portfolio.html
+++ b/portfolio.html
@@ -59,8 +59,96 @@
       </nav>
     </header>
     <!-- Fin du header et de la barre de navigation -->
+    <!-- Début portfolio -->
 
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="thumbnail">
+            <img src="img\10127_m.jpg" alt="">
+            <div class="caption">
+              <p><a href="img\10127_m.jpg" onclick="open('img/10127_m.jpg', 'Popup', 'scrollbars=1,resizable=1,height=500,width=400'); return false;"><i class="fa fa-eye fa-2x" aria-hidden="true"></i></a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="thumbnail">
+            <img src="img\10164_m.jpg" alt="">
+            <div class="caption">
+              <p><a href="img\10164_m.jpg" onclick="open('img/10164_m.jpg', 'Popup', 'scrollbars=1,resizable=1,height=500,width=400'); return false;"><i class="fa fa-eye fa-2x" aria-hidden="true"></i></a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="thumbnail">
+            <img src="img\10165_m.jpg" alt="">
+            <div class="caption">
+              <p><a href="img\10165_m.jpg" onclick="open('img/10165_m.jpg', 'Popup', 'scrollbars=1,resizable=1,height=500,width=400'); return false;"><i class="fa fa-eye fa-2x" aria-hidden="true"></i></a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="thumbnail">
+            <img src="img\10166_m.jpg" alt="">
+            <div class="caption">
+              <p><a href="img\10166_m.jpg" onclick="open('img/10166_m.jpg', 'Popup', 'scrollbars=1,resizable=1,height=500,width=400'); return false;"><i class="fa fa-eye fa-2x" aria-hidden="true"></i></a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="thumbnail">
+            <img src="img\10167_m.jpg" alt="">
+            <div class="caption">
+              <p><a href="img\10167_m.jpg" onclick="open('img/10167_m.jpg', 'Popup', 'scrollbars=1,resizable=1,height=500,width=400'); return false;"><i class="fa fa-eye fa-2x" aria-hidden="true"></i></a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="thumbnail">
+            <img src="img\10168_m.jpg" alt="">
+            <div class="caption">
+              <p><a href="img\10168_m.jpg" onclick="open('img/10168_m.jpg', 'Popup', 'scrollbars=1,resizable=1,height=500,width=400'); return false;"><i class="fa fa-eye fa-2x" aria-hidden="true"></i></a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="thumbnail">
+            <img src="img\10170_m.jpg" alt="">
+            <div class="caption">
+              <p><a href="img\10170_m.jpg" onclick="open('img/10170_m.jpg', 'Popup', 'scrollbars=1,resizable=1,height=500,width=400'); return false;"><i class="fa fa-eye fa-2x" aria-hidden="true"></i></a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="thumbnail">
+            <img src="img\10171_m.jpg" alt="">
+            <div class="caption">
+              <p><a href="img\10171_m.jpg" onclick="open('img/10171_m.jpg', 'Popup', 'scrollbars=1,resizable=1,height=500,width=400'); return false;"><i class="fa fa-eye fa-2x" aria-hidden="true"></i></a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="thumbnail">
+            <img src="img\10172_m.jpg" alt="">
+            <div class="caption">
+              <p><a href="img\10172_m.jpg" onclick="open('img/10172_m.jpg', 'Popup', 'scrollbars=1,resizable=1,height=500,width=400'); return false;"><i class="fa fa-eye fa-2x" aria-hidden="true"></i></a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Fin portfolio -->
     <!-- Début du footer -->
     <footer>
       <hr>
